--- a/index.html
+++ b/index.html
@@ -3,10 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name</title>
+    <title>我的个人网页</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        section {
+            padding: 20px;
+            background: #fff;
+            margin: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            text-align: center;
+            padding: 10px 0;
+            background: #333;
+            color: #fff;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My Personal Page</h1>
-    <p>This is a brief introduction about myself.</p>
+
+<header>
+    <h1>欢迎来到我的个人网页</h1>
+</header>
+
+<section>
+    <h2>关于我</h2>
+    <p>你好！我是一名热爱生物学的教育工作者，致力于推动学生对科学的热情。</p>
+
+    <h2>我的兴趣</h2>
+    <ul>
+        <li>生物学</li>
+        <li>教育</li>
+        <li>环境保护</li>
+        <li>阅读</li>
+    </ul>
+
+    <h2>联系我</h2>
+    <p>电子邮件: yourname@example.com</p>
+</section>
+
+<footer>
+    <p>&copy; 2024 我的个人网页</p>
+</footer>
+
 </body>
 </html>
